[Refactor] Initialised turborepo with web, docs and server integrated with prisma, docker, tailwind css

--- a/turbo.json
+++ b/turbo.json
@@ -14,6 +14,15 @@
     },
     "clean": {
       "cache": false
+    },
+    "db:migrate:deploy": {},
+    "db:push": {},
+    "db:seed": {},
+    "studio": {
+      "dependsOn": ["^studio"]
+    },
+    "generate": {
+      "dependsOn": ["^generate"]
     }
   }
 }
