--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,7 +13,10 @@
     "next": "^14.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "@repo/ui": "*"
+    "@repo/ui": "*",
+    "@repo/common": "*",
+    "@repo/utils": "*",
+    "@repo/database": "*"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^14.1.1",
